--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -6,17 +6,17 @@
 a,
 a:focus,
 a:hover {
-  color: #fff;
+  color:#dddae6;
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  color: #333;
+  color: rgb(223, 220, 230);
   text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: #fff;
-  border: .05rem solid #fff;
+  background-color: rgb(102, 36, 163);
+  border: .05rem solid #d0ced6;
 }
 
 
@@ -27,13 +27,13 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  color: #2f168a 350F4A;
 }
 
-body {
+#body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
+  color: #2f168a;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
@@ -57,14 +57,14 @@ body {
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
-  color: rgba(255, 255, 255, .5);
+  color: #2f168a;
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: #2f168a(255, 255, 255, .25);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -72,8 +72,8 @@ body {
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color:#2f168a;
+  border-bottom-color:#2f168a;
 }
 
 @media (min-width: 48em) {
@@ -95,6 +95,8 @@ body {
 .cover .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: 700;
+  color: #378a16;
+  background-color: pink;
 }
 
 
@@ -102,11 +104,11 @@ body {
  * Footer
  */
 .mastfoot {
-  color: rgba(255, 255, 255, .5);
+  color: #2f168a(255, 255, 255, .5);
 }
 
 .popup {
-    color: black;
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 
@@ -116,4 +118,28 @@ body {
 
 .row{
   padding:50px;
+}
+
+
+/* Log in page */
+main{
+  color: #2f168a;
+}
+
+
+
+
+#login{
+  color: #2f168a
+}
+
+#popbtn{
+  background-color:rgb(102, 36, 163);
+ border-color: rgb(102, 36, 163);
+ 
+}
+#stickbtn{
+  background-color:rgb(102, 36, 163);
+ border-color: rgb(102, 36, 163);
+ 
 }
